[gd_scene load_steps=3 format=3 uid="uid://bausfpa6p6u35"]

[ext_resource type="Script" uid="uid://b5b7gomscko82" path="res://sadleaf.gd" id="1_oqiuo"]
[ext_resource type="Texture2D" uid="uid://byfivw37eauo5" path="res://images/3xsyrup.png" id="2_oqiuo"]

[node name="Node2D" type="Node2D"]
z_index = 2
script = ExtResource("1_oqiuo")

[node name="Timer" type="Timer" parent="."]
wait_time = 11.0

[node name="RigidBody2D" type="RigidBody2D" parent="."]
mass = 2.875

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oqiuo")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -63.0
offset_top = -63.0
offset_right = 61.0
offset_bottom = 61.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="child_entered_tree" from="RigidBody2D" to="." method="_on_rigid_body_2d_child_entered_tree"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
